--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Playfair+Display:400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Catalog</title>
+<link href="/css/style-3c0d763a3f.css" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
-    <script src="bundle.js"></script>
-</body>
+<script type="text/javascript" src="/bundle.76f3e13c01f5.min.js"></script></body>
 </html>
